fixed alignment issues as well cross-browser rendering

--- a/space-tourism/src/components/Navbar.css
+++ b/space-tourism/src/components/Navbar.css
@@ -62,6 +62,9 @@ header {
 	.nav-logo {
 		flex-shrink: 0;
 	}
+	.nav-header {
+		margin-top: 2.5rem;
+	}
 	.nav-header::after {
 		content: '';
 		display: block;
